--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
     <body>
         <h1>Etch-a-Sketch</h1>
+
+        <button class="setBtn" type="button">Set Grid</button>
         
-        <div class="gridContainer"></div>
+        <div id="gridContainer"></div>
 
         <script src="/js/index.js"></script>
     </body>
