--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
     <body>
         
-        <h1 class="title">Etch-a-Sketch App</h1>
+        <h1 class="title Chakra">Etch-a-Sketch App</h1>
         
         <div class="etchContainer">
             <div id="gridContainer"></div>
