--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,400;0,700;1,600&display=swap" rel="stylesheet">
     <title>Iskandar's Etch-a-Sketch</title>
 </head>
@@ -22,7 +22,7 @@
             </section>
         </div>
 
-        <script src="./js/index.js"></script>
+        <script src="js/index.js"></script>
 
     </body>
 
